fix: correct swagger doc directory generation
